# cpp-package-manager-playground

./: CMakeLists.txt  README.md  test_package_managers.sh
cmake/: hunter.cmake  spack.cmake  vcpkg.cmake
projects/fmt-example/: CMakeLists.txt  main.cpp
projects/spdlog-example/: CMakeLists.txt  main.cpp
